# rust-distributed

./: Cargo.toml
src/: lib.rs  main.rs
src/api/: rest_api.rs
src/config/: kafka_config.rs
src/consumers/: mod.rs  task_consumer.rs
src/exception/: kafka_exception.rs  mod.rs
src/models/: task.rs
src/processors/: mod.rs  task_processor.rs
src/producers/: mod.rs  task_producer.rs
